--- a/css/styles.css
+++ b/css/styles.css
@@ -133,30 +133,26 @@ font-size: var(--font-size);
     color: var(--link-focus);
 }
 
-
-/* 
-.menu-link::after {
-    content:'' ;
+.menu-link-item-nav::after {
+    content:'';
     display: block;
-    width: 67px;
+    width: 100%;
      height: 4px;
-    margin-top: 20px;
      background: var(--link-focus);
      border-radius: 2px;
-     margin: 0 auto;
-        
+     
+     
 }
 
-.menu-link-item:visited::after {
+.menu-link-item::after {
     content: '';
     display: block;
-    width: 48px;
+    width: 100%;
     height: 4px;
-    margin-top: 20px;
     background: var(--link-focus);
     border-radius: 2px;
-    margin: 0 auto;
-} */
+
+}
 
 .menu {
     display: flex;
