--- a/css/styles.css
+++ b/css/styles.css
@@ -127,6 +127,7 @@ font-size: var(--font-size);
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: var(--secondary-text-color);
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .menu-link:hover,
 .menu-link:focus {
@@ -178,6 +179,7 @@ font-size: var(--font-size);
     color: var(--primary-text-color);
     line-height: 1.5;
     letter-spacing: 0.02em;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .contact:hover,
 .contact:focus {
@@ -237,6 +239,8 @@ font-size: var(--font-size);
     letter-spacing: 0.04em;
     display: flex;
     align-items: center;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
  
 }
 
@@ -356,6 +360,7 @@ font-size: var(--font-size);
     height: 40px;
     border-radius: 50%;
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .social-list-icon {
@@ -387,6 +392,7 @@ font-size: var(--font-size);
     border: 1px solid #8E8F99;
     border-radius: 4px;  
     color: #404BBF;
+    transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .customers-icon{
      fill:#8E8F99;
@@ -440,6 +446,7 @@ font-size: var(--font-size);
     height: 40px;
     border-radius: 50%;
     background-color: #4D5AE5;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1)
 }
 .footer-card {
     Fill: #F4F4FD
@@ -551,16 +558,15 @@ font-size: var(--font-size);
     background: #F4F4FD;
     border: 1px solid #E7E9FC;
     border-radius: 4px;
-   
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .modal-btn:hover,
 .modal-btn:focus {
     background-color: var(--link-focus);
     color: var(--theme-white);
-    background: #404BBF;
+    background-color: #404BBF;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
     border: 1px solid #404BBF;
-    border-radius: 4px;
 }
 
 .filter {
@@ -580,13 +586,13 @@ font-size: var(--font-size);
     row-gap: 48px;  
 }
 .works-page-filter {
-    transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), border-radius 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 
 .works-page-filter:hover,
 .works-page-filter:focus  {  
-    background: #FFFFFF;
+    background-color: #FFFFFF;
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
     border-radius: 0px 0px 4px 4px;
    
